--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <!-- Área de preenchimento -->
   <td>Quantidade de plots:</td>
-  <input id="quantidadePlantada" type="number" placeholder="Quantos plots possui?">
+  <input id="quantidadePlantada" type="number" placeholder="Qtd.">
   <button onclick="sementesPlantadas()">Clique para salvar!</button>  <!-- rever isso ou apagar dps -->
 
   <!-- Área de resultados -->
