--- a/public/index.html
+++ b/public/index.html
@@ -15,43 +15,51 @@
     </div>
   </div>
 
-  <div class="select-group">
+  <!-- Container pai para Skills, Collectibles e Wearables -->
+  <div class="items-row">
 
-  </div>   
+    <!-- Bloco de Skills -->
+    <div class="skills-block">
+      <h2>Skills</h2>
 
-  <!-- Bloco de Skills -->
-  <h2>Skills</h2>
+      <p>Skills - Legacy</p>
+      <div class="checkbox-bloco">
+        <div id="skills-legacy-container" class="skill-container"></div>
+      </div>
+      
+      <p>Skills Land Expansion</p>
+      <div class="checkbox-bloco">
+        <div id="skills-tier1-container" class="skill-container"></div>
+      </div>
 
-  <p>Skills - Legacy</p>
-  <div class="checkbox-bloco">
-    <div id="skills-legacy-container" class="skill-container"></div>
-  </div>
-  
-  <p>Skills Land Expansion</p>
-  <div class="checkbox-bloco">
-    <div id="skills-tier1-container" class="skill-container"></div>
-  </div>
+      <div class="checkbox-bloco">
+        <div id="skills-tier2-container" class="skill-container"></div>
+      </div>
 
-  <div class="checkbox-bloco">
-    <div id="skills-tier2-container" class="skill-container"></div>
-  </div>
+      <div class="checkbox-bloco">
+        <div id="skills-tier3-container" class="skill-container"></div>
+      </div>
+    </div>
 
-  <div class="checkbox-bloco">
-    <div id="skills-tier3-container" class="skill-container"></div>
-  </div>
+    <!-- Bloco de Collectibles -->
+    <div class="collectibles-block">
+      <h2>Collectibles</h2>
+      <div class="checkbox-bloco">
+        <div id="collectibles-container" class="nft-container"></div>
+      </div>
+    </div>
 
-  <!-- Bloco de NFTs Dinâmicos -->
-  <div class="checkbox-bloco">
-    <h2>Collectibles</h2>
-    <div id="collectibles-container" class="nft-container"></div>
-  </div>
+    <!-- Bloco de Wearables -->
+    <div class="wearables-block">
+      <h2>Wearables</h2>
+      <div class="checkbox-bloco">
+        <div id="wearables-container" class="nft-container"></div>
+      </div>
+    </div>
 
-  <div class="checkbox-bloco">
-    <h2>Wearables</h2>
-    <div id="wearables-container" class="nft-container"></div>
-  </div>
+  </div> <!-- Fim items-row -->
 
-  <!-- div é pra separar e pro css poder estilizar (tem mais coisas, mas é basicamente isso) -->
+  <!-- Linha de selects e inputs -->
   <div class="linha-selects">
     <div class="select-group">
       <label for="estacaoSelect">Estação atual:</label>
@@ -88,27 +96,19 @@
         <button id="salvarPlots" onclick="quantidadePlots()">Salvar</button>
       </div>
     </div> 
-
+    
   </div>
 
-
-
   <div id="saida"></div>
-
 
   <script src="./recursos.js"></script>
   <script src="./skills.js"></script>
   <script src="./nfts.js"></script>
-
   <script src="./formatarTempo.js"></script>
   <script src="./calculos.js"></script>
   <script src="./resultados.js"></script>
-
   <script src="./statusFarm.js"></script>
   <script src="./checkbox.js"></script>
 
-  
-
 </body>
 </html>
-
