--- a/public/index.html
+++ b/public/index.html
@@ -61,14 +61,13 @@
 
   <!-- Linha de selects e inputs -->
   <div class="linha-selects">
+
     <div class="select-group">
-      <label for="estacaoSelect">Estação atual:</label>
-      <select id="estacaoSelect">
-        <option value="Spring">Spring</option>
-        <option value="Summer">Summer</option>
-        <option value="Autumn">Autumn</option>
-        <option value="Winter">Winter</option>
-      </select>
+      <div class="input-plots">
+        <label for="plotsPossuidos">Quantidade de plots:</label><br>
+        <input id="plotsPossuidos" type="number" placeholder="Ex: 70">
+        <button id="salvarPlots" onclick="quantidadePlots()">Salvar</button>
+      </div>
     </div>
 
     <div class="select-group">
@@ -82,6 +81,16 @@
     </div>
 
     <div class="select-group">
+      <label for="estacaoSelect">Estação atual:</label>
+      <select id="estacaoSelect">
+        <option value="Spring">Spring</option>
+        <option value="Summer">Summer</option>
+        <option value="Autumn">Autumn</option>
+        <option value="Winter">Winter</option>
+      </select>
+    </div>
+
+    <div class="select-group">
       <label for="vipSelect">Possui Vip?</label>
       <select id="vipSelect">
         <option value="Não">Não</option>
@@ -90,12 +99,13 @@
     </div>
 
     <div class="select-group">
-      <div class="input-plots">
-        <label for="plotsPossuidos">Quantidade de plots:</label><br>
-        <input id="plotsPossuidos" type="number" placeholder="Ex: 70">
-        <button id="salvarPlots" onclick="quantidadePlots()">Salvar</button>
-      </div>
-    </div> 
+      <label for="evento-bonus">Evento Bonus</label>
+      <select id="evento-bonus">
+        <option value="nenhum">Nenhum</option>
+        <option value="sunshower">Sunshower</option>
+        <option value="bountifulHarvest">Bountiful Harvest</option>
+      </select>
+    </div>
     
   </div>
 
