--- a/public/index.html
+++ b/public/index.html
@@ -63,30 +63,12 @@
   <div class="linha-selects">
 
     <div class="select-group">
-      <div class="input-plots">
-        <label for="plotsPossuidos">Quantidade de plots:</label><br>
-        <input id="plotsPossuidos" type="number" placeholder="Ex: 70">
-        <button id="salvarPlots" onclick="quantidadePlots()">Salvar</button>
-      </div>
-    </div>
-
-    <div class="select-group">
       <label for="ilhaSelect">Ilha atual:</label>
       <select id="ilhaSelect">
         <option value="Basic">Basic</option>
         <option value="Spring">Spring</option>
         <option value="Desert">Desert</option>
         <option value="Vulcano">Vulcano</option>
-      </select>
-    </div>
-
-    <div class="select-group">
-      <label for="estacaoSelect">Estação atual:</label>
-      <select id="estacaoSelect">
-        <option value="Spring">Spring</option>
-        <option value="Summer">Summer</option>
-        <option value="Autumn">Autumn</option>
-        <option value="Winter">Winter</option>
       </select>
     </div>
 
@@ -99,21 +81,49 @@
     </div>
 
     <div class="select-group">
-      <label for="evento-bonus">Evento Bonus</label>
+      <div class="input-plots">
+        <label for="plotsPossuidos">Quantidade de plots:</label><br>
+        <input id="plotsPossuidos" type="number" placeholder="Ex: 70"><br>
+      </div>
+    </div>
+    
+    <div class="select-group">
+      <div class="input-flower-em-coins">
+        <label for="flowerEmCoins">1 Flower em Coins:</label><br>
+        <input id="flowerEmCoins" type="number" placeholder="Ex: 320">
+      </div>
+    </div>
+
+    <button id="salvarInfos" onclick="salvarInformacoes()">Salvar</button>
+
+    <div class="select-group">
+      <label for="estacaoSelect">Estação atual:</label>
+      <select id="estacaoSelect">
+        <option value="Spring">Spring</option>
+        <option value="Summer">Summer</option>
+        <option value="Autumn">Autumn</option>
+        <option value="Winter">Winter</option>
+      </select>
+    </div>
+
+    <div class="select-group">
+      <label for="evento-bonus">Evento Bonus:</label>
       <select id="evento-bonus">
         <option value="nenhum">Nenhum</option>
         <option value="sunshower">Sunshower</option>
         <option value="bountifulHarvest">Bountiful Harvest</option>
       </select>
     </div>
-    
+
   </div>
 
   <div id="saida"></div>
 
+
   <script src="./recursos.js"></script>
   <script src="./skills.js"></script>
   <script src="./nfts.js"></script>
+  <script src="./minhasApi.js"></script>
   <script src="./formatarTempo.js"></script>
   <script src="./calculos.js"></script>
   <script src="./resultados.js"></script>
