--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,8 @@
     <div class="select-group">
       <label for="vipSelect">Possui Vip?</label>
       <select id="vipSelect">
-        <option value="Não">Não</option>
         <option value="Sim">Sim</option>
+        <option value="Não">Não</option>
       </select>
     </div>
 
@@ -89,8 +89,8 @@
     
     <div class="select-group">
       <div class="input-flower-em-coins">
-        <label for="flowerEmCoins">1 Flower em Coins:</label><br>
-        <input id="flowerEmCoins" type="number" placeholder="Ex: 320">
+        <label for="flower-em-coins">1 Flower em Coins:</label><br>
+        <input id="flower-em-coins" type="number" placeholder="Ex: 320">
       </div>
     </div>
 
