--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,11 @@
     <div class="input-numero-da-farm">
       <label for="numeroFarm">Numero da Farm:</label><br>
       <input id="numeroFarm" type="number" placeholder="Ex: 3661">
-      <button id="procurarFarm" onclick="numeroDaFarm()">Pesquisar</button>
+      <button id="procurarFarm" onclick="numeroDaFarm()">Pesquisar</button> 
     </div>
   </div>
+
+  <h3 id="valor-do-flower"></h3>
 
   <!-- Container pai para Skills, Collectibles e Wearables -->
   <div class="items-row">
@@ -63,17 +65,17 @@
   <div class="linha-selects">
 
     <div class="select-group">
-      <label for="ilhaSelect">Ilha atual:</label>
+      <label for="ilhaSelect" id="label-ilha-que-esta">Ilha atual:</label>
       <select id="ilhaSelect">
         <option value="Basic">Basic</option>
-        <option value="Spring">Spring</option>
+        <option value="Petal">Petal</option>
         <option value="Desert">Desert</option>
         <option value="Vulcano">Vulcano</option>
       </select>
     </div>
 
     <div class="select-group">
-      <label for="vipSelect">Possui Vip?</label>
+      <label for="vipSelect" id="label-vip"></label>
       <select id="vipSelect">
         <option value="Sim">Sim</option>
         <option value="Não">Não</option>
@@ -82,14 +84,14 @@
 
     <div class="select-group">
       <div class="input-plots">
-        <label for="plotsPossuidos">Quantidade de plots:</label><br>
+        <label for="plotsPossuidos" id="label-plots">Quantidade de plots:</label><br>
         <input id="plotsPossuidos" type="number" placeholder="Ex: 70"><br>
       </div>
     </div>
     
     <div class="select-group">
       <div class="input-flower-em-coins">
-        <label for="flower-em-coins">1 Flower em Coins:</label><br>
+        <label for="flower-em-coins" id="label-flower-em-coins"></label><br>
         <input id="flower-em-coins" type="number" placeholder="Ex: 320">
       </div>
     </div>
@@ -97,7 +99,7 @@
     <button id="salvarInfos" onclick="salvarInformacoes()">Salvar</button>
 
     <div class="select-group">
-      <label for="estacaoSelect">Estação atual:</label>
+      <label for="estacaoSelect" id="label-estacao"></label>
       <select id="estacaoSelect">
         <option value="Spring">Spring</option>
         <option value="Summer">Summer</option>
@@ -107,7 +109,7 @@
     </div>
 
     <div class="select-group">
-      <label for="evento-bonus">Evento Bonus:</label>
+      <label for="evento-bonus" id="label-evento-bonus"></label>
       <select id="evento-bonus">
         <option value="nenhum">Nenhum</option>
         <option value="sunshower">Sunshower</option>
@@ -115,6 +117,20 @@
       </select>
     </div>
 
+  </div>
+
+  <div class="select-group">
+    <br><label for="pack-gems" id="label-gems"></label>
+    <select id="pack-gems">
+      <option value="100-0.90">100 Gems - $0.90</option>
+      <option value="650-4.54">650 Gems - $4.54</option>
+      <option value="1350-9.09">1350 Gems - $9.09</option>
+      <option value="2800-18.19">2800 Gems - $18.19</option>
+      <option value="7400-45.49">7400 Gems - $45.49</option>
+      <option value="15500-90.99">15500 Gems - $90.99</option>
+      <option value="200000-909.99">200000 Gems - $909.99</option>
+    </select>
+    <h3 id="valor-por-gem"></h3>
   </div>
 
   <div id="saida"></div>
