nova arvore de habilidades e ajustes nas contas
nova arvore que impacta na CM, mas tambem impacta no Oil, assim trazendo novos resultados, adição de novas collectibles e novos wearables, mas ainda não funcionais (menos crops). Adição de cards aos minerios(ainda nao pronto).

--- a/public/index.html
+++ b/public/index.html
@@ -134,6 +134,24 @@
           </div>
         </div>
       </div>
+
+      <!-- Skills de Machinery (Tier 1, 2 e 3) -->
+      <div class="accordion">
+        <button class="accordion-btn">
+          <img src="./icones/skillMachinery.png" alt="Ícone Mineral" class="icon-btn">
+          <span id="accordion-skill-machinery">Machinery</span>
+        </button>
+        <div class="accordion-content">
+          <div id="skills-machinery-tier1-container" class="skill-container"></div>
+          <div id="skills-machinery-tier2-container" class="skill-container">
+            <p class="texto-skill-desbloquear" id="accordion-skill-machinery-tier2"></p>
+          </div>
+          <div id="skills-machinery-tier3-container" class="skill-container">
+            <p class="texto-skill-desbloquear" id="accordion-skill-machinery-tier3"></p>
+          </div>
+        </div>
+      </div>
+
     </section>
 
     <!-- ================== COLUNA COLLECTIBLES ================== -->
@@ -197,6 +215,14 @@
           <div id="new-collectibles-container" class="nft-container"></div>
         </div>
       </div>
+
+      <div class="accordion">
+        <button class="accordion-btn">Novos Wearables</button>
+        <div class="accordion-content">
+          <div id="new-wearables-container" class="nft-container"></div>
+        </div>
+      </div>
+
     </section>
   </main>
 
