adição de tier nos recursos
tier adicionado aos recursos e desativação da turtle de pedra no momento

--- a/public/index.html
+++ b/public/index.html
@@ -262,22 +262,30 @@
   <section class="linha-selects">
     <div class="select-group">
       <label for="treesPossuidas">Trees:</label>
-      <input id="treesPossuidas" type="number" placeholder="Ex: 15">
+      <input id="treesPossuidas" type="number" placeholder="Tier 1">
+      <input id="treesTier2" type="number" placeholder="Tier 2">
+      <input id="treesTier3" type="number" placeholder="Tier 3">
     </div>
 
     <div class="select-group">
       <label for="stonesPossuidas">Stones:</label>
-      <input id="stonesPossuidas" type="number" placeholder="Ex: 15">
+      <input id="stonesPossuidas" type="number" placeholder="Tier 1">
+      <input id="stonesTier2" type="number" placeholder="Tier 2">
+      <input id="stonesTier3" type="number" placeholder="Tier 3">
     </div>
 
     <div class="select-group">
       <label for="ironsPossuidos">Irons:</label>
-      <input id="ironsPossuidos" type="number" placeholder="Ex: 10">
+      <input id="ironsPossuidos" type="number" placeholder="Tier 1">
+      <input id="ironsTier2" type="number" placeholder="Tier 2">
+      <input id="ironsTier3" type="number" placeholder="Tier 3">
     </div>
 
     <div class="select-group">
       <label for="goldsPossuidos">Golds:</label>
-      <input id="goldsPossuidos" type="number" placeholder="Ex: 5">
+      <input id="goldsPossuidos" type="number" placeholder="Tier 1">
+      <input id="goldsTier2" type="number" placeholder="Tier 2">
+      <input id="goldsTier3" type="number" placeholder="Tier 3">
     </div>
 
     <div class="select-group">
